--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
 botbuilder-integration-aiohttp>=4.14.0
+aiohttp==3.6.2
+gunicorn
+botbuilder.dialogs
+botbuilder
+botbuilder.core
+sqlalchemy==1.3.16
+openai
+bs4
+transformers
+gtts
